<resources>
    <string name="app_name">Ruang Advokat</string>
    <string name="home">Beranda</string>
    <string name="schedule">Jadwal</string>
    <string name="status">Status</string>
    <string name="notification">Notifikasi</string>
    <string name="account">Akun</string>

    <string name="has_account">Sudah punya akun?</string>
    <string name="email_address">Alamat Email</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="no_account">Belum punya akun?</string>
    <string name="register">Daftar</string>

    <string name="logout">Keluar</string>

    <string name="register_title">Daftar sebagai</string>
    <string name="client">Klien</string>
    <string name="advocat">Advokat</string>
    <string name="law_firm">Lembaga Hukum</string>

    <string name="register_as_client">Daftar sebagai klien</string>
    <string name="register_as_advocate">Daftar sebagai advokat</string>
    <string name="name">Nama Lengkap</string>
    <string name="birthday">Tanggal Lahir</string>
    <string name="phone">Nomor Telepon</string>
    <string name="password_confirm">Ulangi Kata Sandi</string>
    <string name="accept">Saya menyetujui</string>
    <string name="terms_and_conditions">Syarat dan Ketentuan</string>
    <string name="address">Alamat</string>
    <string name="birthplace">Tempat Lahir</string>
    <string name="certificate_number">Nomor Sertifikat</string>
    <string name="advocate_card">Kartu Advokat</string>
    <string name="experience">Pengalaman</string>
    <string name="register_as_law_firm">Daftar sebagai lembaga hukum</string>
    <string name="ijazah">Ijazah</string>
    <string name="choose_file">Pilih File</string>
    <string name="selfie_with_id_card">Foto selfie dengan KTP</string>
    <string name="selfie_with_pkpa">Foto selfie dengan PKPA</string>
    <string name="selfie_with_upa">Foto selfie dengan UPA</string>
    <string name="selfie_with_advocate_card">Foto selfie dengan Kartu Advokat</string>
    <string name="call_admin_title">Harap hubungi Admin RuangAdvokat.com via</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="okay">Oke</string>
    <string name="check_email">Cek email Anda untuk verifikasi</string>
    <string name="email_not_verified">Email belum diverifikasi. Harap cek email Anda</string>
    <string name="authenticating">Mengautentikasi…</string>
    <string name="login_failed">Gagal masuk</string>
    <string name="must_be_filled">harus diisi</string>
    <string name="invalid_email">masukkan email yang valid</string>
    <string name="min_char">minimal 8 karakter</string>
    <string name="signing_up">Mendaftarkan akun Anda…</string>
    <string name="invalid_phone">masukkan nomor telepon yang valid</string>
    <string name="unmatch_password">kata sandi tidak cocok</string>
    <string name="register_failed">Pendaftaran gagal</string>
    <string name="certificate_filename">Nama file sertifikat</string>
    <string name="advocate_card_filename">Nama file kartu advokat</string>
    <string name="verif_email_failed_to_send">Email verifikasi gagal dikirim</string>
    <string name="open_camera">Buka kamera</string>
    <string name="certificate">Sertifikat</string>
    <string name="uploading">Mengunggah</string>
    <string name="done">selesai</string>
    <string name="upload_failed">Gagal unggah</string>
    <string name="upload_success">Berhasil unggah</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="invalid_credentials">Kredensial tidak sah</string>
    <string name="please_wait">Mohon tunggu…</string>
    <string name="expertise">Keahlian</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo">Foto</string>
    <string name="nik">NIK</string>
    <string name="consultation">Konsultasi</string>
    <string name="read">Baca</string>
    <string name="legal_support">Bantuan Hukum</string>
    <string name="document_creation">Pembuatan Dokumen</string>

    <string name="family">Keluarga</string>
    <string name="business">Bisnis</string>
    <string name="debt">Hutang Piutang</string>
    <string name="it">Teknologi Informasi</string>
    <string name="employment">Ketenagakerjaan</string>
    <string name="property">Pertanahan dan Properti</string>
    <string name="intellectual">Kekayaan Intelektual</string>
    <string name="criminal">Seluruh Pidana</string>
    <string name="civil">Seluruh Perdata</string>
    <string name="fee_hour">Biaya/Jam</string>
    <string name="max_fee">maksimal Rp1.000.000</string>

</resources>
