<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".register.fragment.AdvocateFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/advocate_register_title"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_as_advocate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/advocate_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/advocate_register_title" />

        <EditText
            android:id="@+id/advocate_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/address"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/advocate_name" />

        <Spinner
            android:id="@+id/advocate_gender"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:entries="@array/gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/advocate_address" />

        <EditText
            android:id="@+id/advocate_birthplace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:cursorVisible="false"
            android:focusable="false"
            android:hint="@string/birthplace"
            android:inputType="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/advocate_gender" />

        <EditText
            android:id="@+id/advocate_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:cursorVisible="false"
            android:focusable="false"
            android:hint="@string/birthday"
            android:inputType="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/advocate_birthplace" />

        <Spinner
            android:id="@+id/advocate_status"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:entries="@array/status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/advocate_birthday" />

        <TextView
            android:id="@+id/ijazah_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ijazah"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/advocate_status" />

        <Button
            android:id="@+id/btn_ijazah"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/round_button"
            android:text="@string/choose_file"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ijazah_title" />

        <TextView
            android:id="@+id/ijazah_filename"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="@id/btn_ijazah"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_ijazah"
            app:layout_constraintTop_toTopOf="@id/btn_ijazah" />

        <EditText
            android:id="@+id/advocate_certification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/certificate_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_ijazah" />

        <Button
            android:id="@+id/btn_certification"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/round_button"
            android:text="@string/choose_file"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/advocate_certification" />

        <TextView
            android:id="@+id/certification_filename"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/certificate_filename"
            app:layout_constraintBottom_toBottomOf="@id/btn_certification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_certification"
            app:layout_constraintTop_toTopOf="@id/btn_certification" />

        <EditText
            android:id="@+id/advocate_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/advocate_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_certification" />

        <Button
            android:id="@+id/btn_card"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/round_button"
            android:text="@string/choose_file"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/advocate_card" />

        <TextView
            android:id="@+id/card_filename"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/advocate_card_filename"
            app:layout_constraintBottom_toBottomOf="@id/btn_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_card"
            app:layout_constraintTop_toTopOf="@id/btn_card" />

        <Spinner
            android:id="@+id/advocate_experience"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:entries="@array/experience"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_card" />

        <Spinner
            android:id="@+id/advocate_expertise"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:entries="@array/expertise"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/advocate_experience" />

        <EditText
            android:id="@+id/advocate_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/phone"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/advocate_expertise" />

        <EditText
            android:id="@+id/advocate_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/advocate_phone" />

        <EditText
            android:id="@+id/advocate_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/advocate_email" />

        <EditText
            android:id="@+id/advocate_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password_confirm"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/advocate_password" />

        <TextView
            android:id="@+id/advocate_selfie_id_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/selfie_with_ktp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/advocate_password_confirm" />

        <Button
            android:id="@+id/btn_selfie_id_card"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/round_button"
            android:text="@string/choose_file"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/advocate_selfie_id_card" />

        <TextView
            android:id="@+id/selfie_id_card_filename"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="@id/btn_selfie_id_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_selfie_id_card"
            app:layout_constraintTop_toTopOf="@id/btn_selfie_id_card" />

        <TextView
            android:id="@+id/advocate_selfie_pkpa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/selfie_with_pkpa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_selfie_id_card" />

        <Button
            android:id="@+id/btn_selfie_pkpa"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/round_button"
            android:text="@string/choose_file"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/advocate_selfie_pkpa" />

        <TextView
            android:id="@+id/selfie_pkpa_filename"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="@id/btn_selfie_pkpa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_selfie_pkpa"
            app:layout_constraintTop_toTopOf="@id/btn_selfie_pkpa" />

        <TextView
            android:id="@+id/advocate_selfie_upa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/selfie_with_upa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_selfie_pkpa" />

        <Button
            android:id="@+id/btn_selfie_upa"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/round_button"
            android:text="@string/choose_file"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/advocate_selfie_upa" />

        <TextView
            android:id="@+id/selfie_upa_filename"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="@id/btn_selfie_upa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_selfie_upa"
            app:layout_constraintTop_toTopOf="@id/btn_selfie_upa" />

        <TextView
            android:id="@+id/advocate_selfie_advocate_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/selfie_with_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_selfie_upa" />

        <Button
            android:id="@+id/btn_selfie_advocate_card"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/round_button"
            android:text="@string/choose_file"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/advocate_selfie_advocate_card" />

        <TextView
            android:id="@+id/selfie_advocate_card_filename"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="@id/btn_selfie_advocate_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_selfie_advocate_card"
            app:layout_constraintTop_toTopOf="@id/btn_selfie_advocate_card" />

        <CheckBox
            android:id="@+id/advocate_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_selfie_advocate_card" />

        <TextView
            android:id="@+id/terms_and_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@id/advocate_agreement"
            app:layout_constraintStart_toEndOf="@id/advocate_agreement"
            app:layout_constraintTop_toTopOf="@id/advocate_agreement" />

        <Button
            android:id="@+id/advocate_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/register"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/advocate_agreement" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>